--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "orangehill/iseed": "^2.3"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^3.0",
         "fakerphp/faker": "^1.23",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.26",
