Update proggress PPUF

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "^11.0",
         "laravel/socialite": "^5.12",
         "laravel/tinker": "^2.9",
-        "orangehill/iseed": "^2.3"
+        "orangehill/iseed": "^2.3",
+        "rap2hpoutre/fast-excel": "^5.4"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^3.0",
