--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "akaunting/laravel-money": "^2.1",
         "laravel/framework": "^11.0",
         "laravel/pulse": "^1.0@beta",
         "laravel/socialite": "^5.12",
