--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "rap2hpoutre/fast-excel": "^5.4"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.12",
         "barryvdh/laravel-ide-helper": "^3.0",
         "fakerphp/faker": "^1.23",
         "laravel/pint": "^1.13",
